Fixed styling, scaling, contrast issues;

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,17 @@ Colors:
     margin: 0;
 }
 
+.fas {
+    cursor: pointer;
+}
+.fa-eye-slash {
+    color: #777777;
+}
+
+.fa-eye {
+    padding-right: 2px;
+}
+
 .screen-reader-text {
     border: 0;
     clip: rect(1px, 1px, 1px, 1px);
@@ -42,7 +53,6 @@ body {
     margin-left: auto;
     margin-right: auto;
     max-width: 100%;
-    color: #CCCCCC;
 }
 
 header {
@@ -54,7 +64,7 @@ header h1 {
     font-size: 64px;
     font-family: 'Press Start 2P', cursive;
     color: #ffffff;
-    margin-top: 200px;
+    margin-top: 320px;
     margin-bottom: 0.67em;
     line-height: 1.2em;
     
@@ -72,10 +82,11 @@ nav {
     visibility: hidden;
     position: fixed;
     text-align: left;
-    background-color: #0C1026DD;
+    background-color: #0C1026EE;
     border: 1px solid #000000;
     top: 80px;
     right: 10px;
+    color: #bbbbbb;
 }
 
 nav ul {
@@ -86,6 +97,7 @@ nav ul {
 
 nav li {
     margin: 10px;
+    
 }
 
 #summaryCheck, #portfolioCheck, #workCheck, #aboutCheck, #educationCheck {
@@ -105,7 +117,7 @@ a {
     font-weight: bold;
     color: #DB4CA0;
     text-decoration: none;
-    padding: 20px;
+    margin: 20px;
 }
 a:hover {
     color: #44E1F2;
@@ -123,7 +135,7 @@ strong {
 .fab {
     margin: 20px;
     font-size: 64px;
-    color: white;
+    color: #ffffff;
 }
 
 #menu {
@@ -133,8 +145,8 @@ strong {
     padding: 10px;
     margin: 20px;
     font-size: 48px;
-    color: white;
-    background-color: #0C1026DD;
+    color: #ffffff;
+    background-color: #0C1026EE;
     border: 1px solid #000000;
 }
 
@@ -152,8 +164,8 @@ strong {
 main {
 
     width: 100%;
-    color: #aaaaaa;
-    font-size: 16px;
+    color: #bbbbbb;
+    font-size: 14px;
     
 }
 
@@ -199,7 +211,7 @@ main section {
 
 main p{
     padding: 20px;
-    background-color: #0C1026DD;
+    background-color: #0C1026EE;
 
 }
  
@@ -230,9 +242,9 @@ main p{
 }
 #summary div {
     grid-area: qualities-text;
-    background-color: #0C1026DD;
+    background-color: #0C1026EE;
     text-align: center;
-    line-height: 300px;    
+    line-height: 300px;
 }
 #summary ul {
     list-style-type: none;
@@ -242,6 +254,7 @@ main p{
 
 #summary li:hover {
     color: #DB4CA0;
+    cursor: default;
 }
 
 #summary section:nth-of-type(2) h3{
@@ -316,7 +329,7 @@ main p{
 #portfolio h3{grid-area: portfolio-h3-1;}
 #portfolio p{
     grid-area: portfolio-p-1;
-    background-color: #0C1026BB;
+    background-color: #0C1026EE;
 }
 
 #portfolio section:nth-of-type(2) h3{grid-area: portfolio-h3-2;}
@@ -326,7 +339,7 @@ main p{
     grid-area: video;
     text-align: center;
     display: flex;
-    background-color: #0C1026BB;
+    background-color: #0C1026EE;
     width: 100%;
     vertical-align: middle;
 
@@ -339,7 +352,7 @@ main p{
 }
 #empty {
     grid-area: empty;
-    background-color: #0C1026BB;
+    background-color: #0C1026EE;
 }
 
 .play {
@@ -380,8 +393,8 @@ main p{
 }
 
 #workExperience div {
-    background-color: #0C1026DD;
-    padding: 20px;
+    background-color: #0C1026EE;
+    padding: 15px;
 }
 #workExperience ul{
     padding-left: 20px;
@@ -397,7 +410,7 @@ main p{
     display: grid;
     background-image: url("../img/engine.jpg");
     background-size: 100% 100%;
-    grid-template-columns:  Calc(100%/3) Calc(100%/6) 50%;
+    grid-template-columns:  20% 10% 70%;
     grid-template-rows: 
                             50px    /* h3 */
                             250px;   /* Text */
@@ -412,7 +425,7 @@ main p{
     grid-area: workExperience-section2;
     display: grid;
     background-image: url("../img/fiber.jpg");
-    grid-template-columns:  50% Calc(100%/6) Calc(100%/3);
+    grid-template-columns:  70% 10% 20%;
     grid-template-rows: 
                             50px    /* h3 */
                             250px;   /* Text */
@@ -428,7 +441,7 @@ main p{
     grid-area: workExperience-section3;
     display: grid;
     background-image: url("../img/construction.jpg");
-    grid-template-columns:  Calc(100%/3) Calc(100%/6) 50%;
+    grid-template-columns:  20% 10% 70%;
     grid-template-rows: 
                             50px    /* h3 */
                             250px;   /* Text */
@@ -444,7 +457,7 @@ main p{
     grid-area: workExperience-section4;
     display: grid;
     background-image: url("../img/hotel.jpg");
-    grid-template-columns:  50% Calc(100%/6) Calc(100%/3);
+    grid-template-columns:  70% 10% 20%;
     grid-template-rows: 
                             50px    /* h3 */
                             250px;   /* Text */
@@ -476,7 +489,7 @@ main p{
     grid-area: education;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 75px 450px;
+    grid-template-rows: 75px auto;
     grid-template-areas: "education-heading" "education-text";
 }
 
@@ -494,7 +507,7 @@ main p{
 }
 #education div {
     grid-area: education-text;
-    background-color: #0C1026DD;
+    background-color: #0C1026EE;
     padding: 20px;
 }
 
@@ -506,7 +519,7 @@ main p{
     grid-area: about;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 75px 300px 625px;
+    grid-template-rows: 75px auto auto;
     grid-template-areas: "about-heading" "about-text-1" "about-text-2";
 }
 
@@ -516,10 +529,8 @@ main p{
 }
 #about iframe {
     display: block;
-    margin: auto;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
+    margin: 20px auto;
+
 }
 
 #about div {
@@ -540,6 +551,7 @@ main p{
     background-image: url("../img/music.jpg");
 }
 
+
 /* //////////////////////////////// */
 /* Contact */
 /* //////////////////////////////// */
@@ -558,17 +570,12 @@ main p{
 }
 #contact div {
     grid-area: contact-form;
-    background-color: #0C1026BB;
+    background-color: #0C1026EE;
 }
 
 form {
     text-align: center;
 }
-
-/*#name, #message, #sendButton, #subject {
-    background-color: #0C1026BB;
-    color: #CCCCCC;
-}*/
 
 #name {
     margin: 20px;
@@ -594,7 +601,7 @@ form {
     border: 2px solid #DB4CA0;
     font-family: 'Press Start 2P', cursive;
     color: #DB4CA0;
-    background-color: #0C1026BB;
+    background-color: #0C1026EE;
     padding: 20px;
 }
 
@@ -611,15 +618,23 @@ form {
         max-width: 500px;
     }
 
-    main {
-        font-size: 14px;
+
+    #workExperience section:nth-of-type(1) {
+        grid-template-columns:  Calc(100%/3) Calc(100%/6) 50%;
     }
-    main h2 {
-        font-size: 18px;
+
+    #workExperience section:nth-of-type(2) {
+        grid-template-columns:  50% Calc(100%/6) Calc(100%/3);
     }
-    main h3 {
-        font-size: 16px;
+
+    #workExperience section:nth-of-type(3) {
+        grid-template-columns:  Calc(100%/3) Calc(100%/6) 50%;
     }
+
+    #workExperience section:nth-of-type(4) {
+        grid-template-columns:  50% Calc(100%/6) Calc(100%/3);
+    }
+
 
 }
 
@@ -629,19 +644,12 @@ form {
 
 @media screen and (min-width: 1024px){
     body{
-        max-width: 800px;
-        
+        max-width: 800px;     
     }
 
     main {
-        font-size: 20px;
-    }
-
-    main h2 {
-        font-size: 20px;
-    }
-    main h3 {
-        font-size: 18px;
+        font-size: 16px;
+        line-height: 1.25em;
     }
 
 }
